--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .todoapp-title {
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
   font-size: 42px;
 }
@@ -28,7 +28,6 @@ body {
   display: block;
   width: 100px;
   height: 100px;
-  background: url(/img/Santa_hat.svg) no-repeat;
 }
 
 .todoapp-control {
@@ -98,6 +97,7 @@ input {
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+	margin-bottom: 15px;
 }
 
 .deleteBtn {
